ChangeLog

20050609

	- src/julian_day.c
	- lntest/test.c

	Bug fix ln_date_to_zonedate, added tests for
	ln_date_to_zonedate.
	
20050609

	-src/libnova/ln_types.h
	-src/utility.h
	-ln_test/test.c
	
	Added neg bit in ln_dms for small > -1 neg angles. Not sure why
	this had got back in ?

20050609

	- src/libnova/proper_motion.h
	- src/proper_motion.c

	Added variable epoch proper motion func and added units to documentation. 


20050607
	- src/libnova/ln_types.h
	- src/libnova/julian_day.c
	- src/julian_day.c
	- examples/lunar.c
	- examples/sun.c
	- examples/mars.c
	- examples/asteroid.c
	- lntest/test.c

	Added ln_zonedate & supporting functions, change examples,
	added test to lntest.

	- lntest/test.c

	Call usleep between sucessive calls to get_jd (so ./test
	should pass on fast CPU as well).

	- debian/*

	Added Debian build directory.

	Petr Kubanek

20050506
	- src/refraction.c
	
	Fixed bug in refraction calculation.
	
	Radu Corlan

20050503
	- src/libnova/ln_types.h, src/utility.h

	Removed bitfields

	lg


20040712
	- src/transform.c, src/libnova/ln_types.h, src/libnova/transform.h

	Beta Galactics Coordinates support.

	Petr Kubanek

20040712
	-numerous
	
	Refactored sun -> solar in API
	
	lg


*********** release of 0.10.1

20040906
	-src/libnova/solar.h
	
	Removed private function from header

	Liam Girdwood

20040906
	- src/julian_day.c
	
	Fixed micro second overflow bug in ln_get_date_from_sys

	Liam Girdwood


************* release of 0.10.0

20042905
	- Added logo
	
	Edward Rands, Liam Girdwood


20042805
	-src/hyperbolic.c, src/libnova/hyperbolic.h, src/libnova/solar.h

	Fixed doxygen typos
	
	Liam Girdwood
	
20042005
	-src/hyperbolic.c, src/libnova/hyperbolic.h
	
	Added hyperbolic motion of bodies
	
	Petr Kubanek

20040205
	-src/utility.c
	
	Added overflow detection in *_to_hms(), *_to_dms()

20040105
	-src/transform.c
	-examples/transforms.c
	
	Fixed quadrant range bug and added transform example

20041904
	-src/utility.c
	